[project]
name = "xforge"
version = "0.1.0"
description = "High quality Reinforcement Learning algorithms in Jax"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chex>=0.1.88",
    "flax>=0.10.2",
    "gymnasium>=1.0.0",
    "jax>=0.4.38",
    "optax>=0.2.4",
    "orbax>=0.1.9",
]
